fix: Add z-index to tooltip component to prevent tooltip from being positioned behind preview cards

--- a/src/app/shared/ui-components/tooltip/tooltip.component.scss
+++ b/src/app/shared/ui-components/tooltip/tooltip.component.scss
@@ -15,6 +15,7 @@
   margin-top: 5px;
   transform:translateX(-50%);
   pointer-events: none;
+  z-index: 10;
   &::before {
     content: '';
     width: 0;
